docs/api/qiskit/0.24/qiskit.qobj.QasmQobjExperimentConfig.mdx
---
title: QasmQobjExperimentConfig (v0.24)
description: API reference for qiskit.qobj.QasmQobjExperimentConfig in qiskit v0.24
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.qobj.QasmQobjExperimentConfig
---

<span id="qiskit-qobj-qasmqobjexperimentconfig" />

# qiskit.qobj.QasmQobjExperimentConfig

<Class id="qiskit.qobj.QasmQobjExperimentConfig" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/qobj/qasm_qobj.py" signature="QasmQobjExperimentConfig(calibrations=None, **kwargs)" modifiers="class">
  Configuration for a single QASM experiment in the qobj.

  **Parameters**

  *   **calibrations** ([*QasmExperimentCalibrations*](qiskit.qobj.QasmExperimentCalibrations "qiskit.qobj.QasmExperimentCalibrations")) – Information required for Pulse gates.
  *   **kwargs** – Additional free form key value fields to add to the configuration.

  ### \_\_init\_\_

  <Function id="qiskit.qobj.QasmQobjExperimentConfig.__init__" signature="__init__(calibrations=None, **kwargs)">
    **Parameters**

    *   **calibrations** ([*QasmExperimentCalibrations*](qiskit.qobj.QasmExperimentCalibrations "qiskit.qobj.QasmExperimentCalibrations")) – Information required for Pulse gates.
    *   **kwargs** – Additional free form key value fields to add to the configuration.
  </Function>

  ## Methods

  |                                                                                                                               |                                                             |
  | ----------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------- |
  | [`__init__`](#qiskit.qobj.QasmQobjExperimentConfig.__init__ "qiskit.qobj.QasmQobjExperimentConfig.__init__")(\[calibrations]) | **param calibrations**Information required for Pulse gates. |
  | [`from_dict`](#qiskit.qobj.QasmQobjExperimentConfig.from_dict "qiskit.qobj.QasmQobjExperimentConfig.from_dict")(data)         | Create a new QobjHeader object from a dictionary.           |
  | [`to_dict`](#qiskit.qobj.QasmQobjExperimentConfig.to_dict "qiskit.qobj.QasmQobjExperimentConfig.to_dict")()                   | Return a dictionary format representation of the QASM Qobj. |

  ### from\_dict

  <Function id="qiskit.qobj.QasmQobjExperimentConfig.from_dict" signature="from_dict(data)" modifiers="classmethod">
    Create a new QobjHeader object from a dictionary.

    **Parameters**

    **data** (*dict*) – A dictionary representing the QobjHeader to create. It will be in the same format as output by [`to_dict()`](#qiskit.qobj.QasmQobjExperimentConfig.to_dict "qiskit.qobj.QasmQobjExperimentConfig.to_dict").

    **Returns**

    The QobjDictField from the input dictionary.

    **Return type**

    QobjDictFieldr
  </Function>

  ### to\_dict

  <Function id="qiskit.qobj.QasmQobjExperimentConfig.to_dict" signature="to_dict()">
    Return a dictionary format representation of the QASM Qobj.

    **Returns**

    The dictionary form of the QobjHeader.

    **Return type**

    dict
  </Function>
</Class>

